--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -55,6 +55,10 @@
   display: flex;
   flex-wrap: wrap;
   padding-left: 0;
+  margin-top: 2rem;
+  @include mobile($breakpoint-sm) {
+    justify-content: center;
+  }
   &__link {
     text-decoration: none;
     padding: 0.7rem 1rem;
@@ -73,4 +77,7 @@
   // Styling scrollbars for moz
   scrollbar-color: darken($white, 10%) lighten($purple, 10%);
   scrollbar-width: thin;
+  @include mobile($breakpoint-sm) {
+    padding: 0.5rem;
+  }
 }
