--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -28,3 +28,12 @@
     outline: none;
   }
 }
+
+// ----------------------------------------
+// mixins
+// ----------------------------------------
+@mixin mobile($breakpoint) {
+  @media only screen and (max-width: $breakpoint) {
+    @content;
+  }
+}
